data/derived/fa15/progs/unify/prog1385.ml.out
Characters 81-82:
  | (ki,vi) :: t -> Printf.fprintf 1 "%s, %d\n" ki vi; if ki == k then vi else assoc(d,k,t);;
                                   ^
Error: This expression has type int but an expression was expected of type
         out_channel
